[project]
name = "ai-med"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2026.6.0",
    "huggingface-hub>=1.19.0",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.3.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
]
